# querynator

./: .editorconfig  .gitignore  .prettierignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch.yml  build_docs.yml  deploy-pypi.yml  lint-code.yml  pytest.yml  tools-api-docs-release.yml
dev_tests/: query_cgi.sh  query_civic.sh  query_stuff.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
example_files/: example.vcf  example.vcf.gz.tbi
example_files/civic_test_out/: civic_test_out.civic_results.tsv  metadata.txt
example_files/test_out.cgi_results/: drug_prescription.tsv  metadata.txt  mutation_analysis.tsv
example_files/test_out_civic/: civic_results.tsv  metadata.txt
querynator/: __init__.py  __main__.py  cgi_api.py  cli.py
querynator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
querynator/.github/: ISSUE_TEMPLATE.md
querynator/helper_functions/: helper_functions.py  ontology.py
querynator/query_api/: __init__.py  cancertypes.js  cgi_api.py  civic_api.py
querynator/report_scripts/: __init__.py  combine_cgi.py  combine_cgi_civic.py  combine_civic.py  create_report.py  (+1 more)
tests/: __init__.py  test_ontology.py  test_querynator.py
(+17 files in other folders)
