[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=40.6.0",
    "wheel"
]

[tool.black]
line-length = 120
target_version = ["py38", "py39", "py310"]

[tool.pytest.ini_options]
markers = [
    "datafiles: load datafiles"
]
testpaths = ["tests"]
norecursedirs = [ ".*", "build", "dist", "*.egg", "testing", "__pycache__", ".github", "querynator", "docs"]

[tool.isort]
profile = "black"
known_first_party = ["querynator"]
multi_line_output = 3
